# ClaudeWatchers

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: bubbles.ts  confetti.ts  main.ts  miniView.test.ts  miniView.ts  sessionStore.test.ts  sessionStore.ts  styles.css  usageStats.test.ts  usageStats.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  server.rs  usage.rs  win32.rs
